Version history of the R genetic analysis package (R/gap)

Version 1.2.2
14-08-2019	Fix bug in sentinels subsetting, i.e., pos --> u[[pos]]
25-06-2019	Add cs and suggest matrixStats
18-06-2019	Add logp and variance explained for sentinels.Rd
12-06-2019	Add z = option to mhtplot.trunc to handle P value = 0
		Change sentinels.R for names other than "Chrom", "End", "MarkerName", "Effect", "StdErr"
06-06-2019	Revise sentinels.R, gap-package.Rd and both use OPGtbl

Version 1.2.1
05-06-2019	Eventual foreign language check with export definitions followed by R-devel CMD INSTALL
		This is noted at the GitHub Computational-Statistics repository (INSTALL.md)

Version 1.2
04-06-2019	Add sentinels function, further revision over C/Fortran code
31-05-2019	Split examples into gap.examples

Version 1.1-27
30-05-2019	Fix hap_c.c and also pgc.h, pgc_c.c through Ripley's options to R CMD check --install-args="",
		which are more restrictive than R-devel CMD check --as-cran and also CRAN check itself.

Version 1.1-26
30-05-2019	Change size of tempname in hap_c.c

Version 1.1-25
29-05-2019	Replace sprintf with snprintf in hap_c.c

Version 1.1-24
29-05-2019	Suggest reshape and revise C/Fortran codes (from CRAN check)

Version 1.1-23
27-05-2019	Suggest calibrate and rmeta, revise require() and pfc.f/pfc.sim.f with do/continue
25-05-2019	Suggest qqman, plotrix while adding mhtplot.trunc
23-05-2019	Suggest dplyr, forestplot, meta and add METAL_forestplot
10-05-2019	Add return total signals from cis.vs.trans.classification
08-05-2019	Add column and row totals for cis.vs.trans.classification
02-05-2019	Change circos.cis.vs.trans.plot so the chords are directional and two-coloured
22-01-2019	Revise cnvplot to handle Y chromosome
20-12-2018	Add circos.mhtplot, revise cnvplot and employ gc.lambda in qqunif.Rd
19-12-2018	Refine cis.vs.trans.plot and inf1.rda
18-12-2018	Add cnv/cnvplot/circos.cnvplot and therefore suggests circlize due to query from Zheng Ye