@@ -1,6 +1,7 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.2.2
+24-08-2019	Reverse compatibility with R 3.3.1 by changing family to family_ in pfc.f
 14-08-2019	Fix bug in sentinels subsetting, i.e., pos --> u[[pos]]
 25-06-2019	Add cs and suggest matrixStats
 18-06-2019	Add logp and variance explained for sentinels.Rd
